Anonymous | Login | 2021-01-23 10:55 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030957 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2019-09-09 14:37 | 2019-10-21 13:58 | ||||
Reporter | tma | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030957: Data Exchange - Assembly item Id should not start with '/' symbol | ||||||||
Description | The problem has been found during migration to the new version of the cadproCore product. Id of the Assembly item does not start with the '/' symbol in the new version. Slash is used only in the intermediate levels to reflect the assembly structure (not in the start and in the end) XCAFDoc_AssemblyItemId::ToString() method returns assembly item Id as a string starting from '/' symbol. When Id's of assembly item are compared (one from cadproCore and one from XCAFDoc_AssemblyItemId::ToString()) there is an error. Actually strings of Id are different(because of the '/' symbol), but really assembly item is the same. In this case PMI's based on assembly items are not displayed after re-opening of the xbf-document. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | gdt/notes/B1 | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0086983) git (administrator) 2019-09-09 15:17 |
Branch CR30957 has been created by tma. SHA-1: 57f7d2835fd8452586c6b2a6c181d85c43e7700d Detailed log of new commits: Author: tma Date: Mon Sep 9 14:36:22 2019 +0300 0030957: Assembly item Id should not start with '/' symbol |
(0087003) git (administrator) 2019-09-11 12:39 |
Branch CR30957 has been updated by tma. SHA-1: 60b66de7237c864db26f06cd704a25d238e2bbf6 Detailed log of new commits: Author: tma Date: Wed Sep 11 12:36:06 2019 +0300 Fix test case: added parsing of the output of the dump note command |
(0087005) tma (developer) 2019-09-11 12:47 |
Dear Irina, Could you review my fix, please. All tests are OK: http://jenkins-test-12.nnov.opencascade.com/view/CR30957-master-TMA/view/COMPARE/ [^] I've modified existing test to check the fix. Thank you in advance, Tatiana. |
(0087008) ika (developer) 2019-09-11 13:17 |
No remarks. |
(0087015) bugmaster (administrator) 2019-09-11 18:49 |
Combination - OCCT branch : CR30957 master SHA - 57f7d2835fd8452586c6b2a6c181d85c43e7700d 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - f9d0bd5e3a29d6a97b3f5f6354ea2397253ab4f8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16838.97000000012 / 16836.290000000165 [+0.02%] Products Total CPU difference: 10552.410000000025 / 10553.510000000031 [-0.01%] Windows-64-VC14: OCCT Total CPU difference: 18313.984375 / 18300.0625 [+0.08%] Products Total CPU difference: 6187.671875 / 6187.359375 [+0.01%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0087096) git (administrator) 2019-09-15 10:55 |
Branch CR30957 has been deleted by inv. SHA-1: 60b66de7237c864db26f06cd704a25d238e2bbf6 |
![]() |
|||
occt: master ac293bde
Timestamp: 2019-09-09 11:36:22 Author: tma Committer: bugmaster [ Details ] [ Diff ] |
0030957: Data Exchange - Assembly item Id should not start with '/' symbol Fix test case: added parsing of the output of the dump note command |
||
mod - src/XCAFDoc/XCAFDoc_AssemblyItemId.cxx | [ Diff ] [ File ] | ||
mod - tests/gdt/notes/B1 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-09-09 14:37 | tma | New Issue | |
2019-09-09 14:37 | tma | Assigned To | => gka |
2019-09-09 14:42 | tma | Assigned To | gka => tma |
2019-09-09 15:17 | git | Note Added: 0086983 | |
2019-09-09 15:28 | kgv | Summary | Assembly item Id should not start with '/' symbol => Data Exchange - Assembly item Id should not start with '/' symbol |
2019-09-09 15:29 | kgv | Relationship added | child of 0028985 |
2019-09-09 15:30 | kgv | Relationship added | related to 0030692 |
2019-09-11 12:39 | git | Note Added: 0087003 | |
2019-09-11 12:47 | tma | Note Added: 0087005 | |
2019-09-11 12:47 | tma | Assigned To | tma => ika |
2019-09-11 12:47 | tma | Status | new => resolved |
2019-09-11 13:17 | ika | Note Added: 0087008 | |
2019-09-11 13:17 | ika | Assigned To | ika => bugmaster |
2019-09-11 13:17 | ika | Status | resolved => reviewed |
2019-09-11 18:49 | bugmaster | Note Added: 0087015 | |
2019-09-11 18:49 | bugmaster | Status | reviewed => tested |
2019-09-11 18:49 | bugmaster | Test case number | => gdt/notes/B1 |
2019-09-15 10:51 | bugmaster | Changeset attached | => occt master ac293bde |
2019-09-15 10:51 | bugmaster | Status | tested => verified |
2019-09-15 10:51 | bugmaster | Resolution | open => fixed |
2019-09-15 10:55 | git | Note Added: 0087096 | |
2019-10-21 13:58 | abv | Target Version | 7.5.0 => 7.4.0 |
Copyright © 2000 - 2021 MantisBT Team |