0030957: Data Exchange - Assembly item Id should not start with '/' symbol

Fix test case: added parsing of the output of the dump note command